wso2/wso2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wso2
  labels:
    app: wso2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wso2
  template:
    metadata:
      labels:
        app: wso2
    spec:
      containers:
        - name: main
          image: wso2/wso2am
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8280
              protocol: TCP
            - containerPort: 8243
              protocol: TCP
            - containerPort: 9443
              protocol: TCP
