wso2/wso2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wso2-service
spec:
  type: NodePort
  selector:
    app: wso2
  ports:
    - name: nio-http
      protocol: TCP
      port: 8280
      targetPort: 8280
    - name: nio-https
      protocol: TCP
      port: 8243
      targetPort: 8243
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
