wso2/wso2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wso2-ingress
#  annotations:
#    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: gwapi.dew.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: wso2-service
                port:
                  number: 8280
