wso2/wso2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wso2
  labels:
    app: wso2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wso2
  template:
    metadata:
      labels:
        app: wso2
    spec:
      containers:
        - name: main
          image: wso2/wso2am
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8280
              protocol: TCP
            - containerPort: 8243
              protocol: TCP
            - containerPort: 9443
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: wso2-service
spec:
  type: NodePort
  selector:
    app: wso2
  ports:
    - name: nio-http
      protocol: TCP
      port: 8280
      targetPort: 8280
    - name: nio-https
      protocol: TCP
      port: 8243
      targetPort: 8243
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wso2-ingress
#  annotations:
#    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: gwapi.dew.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: wso2-service
                port:
                  number: 8280
